[package]
name = "shortname"
description = "与えられたファイルやディレクトリの名前をUTF-8換算で255バイトに収まるようにリネームします。"
authors = ["elderica"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
clap = { version = "4.3.10", features = ["derive", "unicode"] }
fletcher = "0.3.0"
unicode-segmentation = "1.10.1"
